forms-flow-idm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sofmun-keycloak
  namespace : forms-flow-idm
  labels:
    app.kubernetes.io/name: sofmunkeycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sofmunkeycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sofmunkeycloak
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: sofmunkeycloak
          image: sofiamunicipalitydigitall/forms-flow-idm:latest
#          command: ["/opt/jboss/keycloak/bin/standalone.sh"]
#          args: ["-b 0.0.0.0 -Dkeycloak.import=/opt/jboss/keycloak/imports/formsflow-ai-realm.json -Dkeycloak.migration.strategy=OVERWRITE_EXISTING"]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
